--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@vue-stripe/vue-stripe": "^4.2.9",
     "vue": "^3.2.25",
+    "vue-loading-overlay": "^5.0",
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "4"
   },
